--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -69,6 +69,7 @@ jobs:
     name: Run cypress tests
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false  # Added: Don't cancel other matrix jobs if one fails
       matrix:
         browser: [chrome, edge]
     env:
@@ -86,6 +87,8 @@ jobs:
       USER_6_PASSWORD: ${{ secrets.USER_6_PASSWORD }}
       VITE_MSAL_CLIENT_ID: ${{ secrets.LOCAL_MSAL_CLIENT_ID }}
       VITE_MSAL_TENANT_ID: ${{ secrets.LOCAL_MSAL_TENANT_ID }}
+      # CYPRESS CLOUD CONFIGURATION 
+      CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
 
     steps:
       - name: Checkout code
@@ -123,6 +126,8 @@ jobs:
       - name: Start Local Environment
         run: |
           pnpm start & sleep 120
+
+      # UPDATED: Cypress run with Cloud recording 
       - name: Cypress run tests
         uses: cypress-io/github-action@v6
         continue-on-error: true
@@ -132,7 +137,17 @@ jobs:
           working-directory: pets-ui
           browser: ${{ matrix.browser }}
           config-file: cypress/cypress.config.mjs
+          # Cypress Cloud options
+          record: true
+          parallel: true  # Enable parallelization
+          group: 'CI-${{ matrix.browser }}'  # Group runs by browser
+          tag: '${{ github.event_name }},${{ github.ref_name }}'  # Tag with event and branch
+          ci-build-id: '${{ github.sha }}-${{ github.run_number }}-${{ github.run_attempt }}'  # Unique build ID
+        env:
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      #  UPDATED: Retry with Cloud recording 
       - name: Retry if failed
         if: steps.initial_attempt.outcome != 'success'
         uses: cypress-io/github-action@v6
@@ -142,12 +157,21 @@ jobs:
           working-directory: pets-ui
           browser: ${{ matrix.browser }}
           config-file: cypress/cypress.config.mjs
+          # Cypress Cloud options for retry
+          record: true
+          parallel: true
+          group: 'CI-${{ matrix.browser }}-Retry'
+          tag: '${{ github.event_name }},${{ github.ref_name }},retry'
+          ci-build-id: '${{ github.sha }}-${{ github.run_number }}-${{ github.run_attempt }}-retry'
+        env:
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload Failed Tests Screenshots
         if: failure()
         uses: actions/upload-artifact@v4
         with:
-          name: failed-tests-screenshots
+          name: failed-tests-screenshots-${{ matrix.browser }}  # Added browser to name
           path: pets-ui/cypress/screenshots
 
       - name: Merge Mochawesome Reports
@@ -163,7 +187,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: mochawesome-reportmochawesome-report-${{ matrix.browser }}
+          name: mochawesome-report-${{ matrix.browser }}
           path: pets-ui/cypress/reports/mochawesome/
 
   core-services-tests:
