TBBETA-1421 Create audit service (#580)

--- a/configs/.env.preprod
+++ b/configs/.env.preprod
@@ -21,3 +21,6 @@ VITE_AUTH_ENDPOINT_URI=https://petsb2cdev.ciamlogin.com
 APPDEPLOY_BUCKET_NAME=aw-pets-euw-preprod-s3-frontendwebapp
 EDAP_INTEGRATION_LAMBDA_NAME=edap-integration-lambda
 EDAP_INTEGRATION_LAMBDA_BUCKET=aw-pets-euw-preprod-s3-edap-integrationlambda
+AUDIT_SERVICE_LAMBDA_NAME=audit-lambda
+AUDIT_SERVICE_LAMBDA_BUCKET=aw-pets-euw-preprod-s3-audit-lambda
+AUDIT_SERVICE_DATABASE_NAME=audit-details
