--- a/configs/.env.test.local
+++ b/configs/.env.test.local
@@ -30,3 +30,5 @@ EDAP_INTEGRATION_LAMBDA_NAME=edap-integration-lambda
 EDAP_INTEGRATION_LAMBDA_BUCKET=aw-pets-euw-dev-s3-edap-integrationlambda
 EDAP_INTEGRATION_QUEUE_NAME=sqs-edap-integration
 EDAP_INTEGRATION_DLQ_NAME=sqs-edap-integration-dlq
+AUDIT_SERVICE_LAMBDA_NAME=audit-lambda
+AUDIT_SERVICE_DATABASE_NAME=test-audit-details
