--- a/pets-ui/package.json
+++ b/pets-ui/package.json
@@ -11,7 +11,7 @@
     "preview": "vite preview",
     "test": "vitest run",
     "test-coverage": "vitest run --coverage",
-    
+
     "cypress:open": "cypress open -C cypress/cypress.config.mjs",
     "cypress:run": "cypress run -C cypress/cypress.config.mjs",
     "cypress:open:qat": "cross-env ENVIRONMENT=qat cypress open -C cypress/cypress.config.mjs",
@@ -87,12 +87,13 @@
     "globals": "^15.11.0",
     "jsdom": "^25.0.1",
     "mocha-junit-reporter": "^2.2.1",
-    "mochawesome": "^7.1.3",
-    "mochawesome-merge": "^5.0.0",
-    "mochawesome-report-generator": "^6.2.0",
+    "mochawesome": "^7.1.4",
+    "mochawesome-merge": "^5.1.0",
+    "mochawesome-report-generator": "^6.3.2",
     "msw": "^2.6.6",
-    "vite": "^5.4.19",
-    "vite-tsconfig-paths": "^5.1.2"
+    "vite": "^7.2.6",
+    "vite-tsconfig-paths": "^5.1.2",
+    "vitest": "^4.0.15"
   },
   "scarfSettings": {
     "enabled": false
