--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.36.0",
     "@types/node": "^22.13.4",
-    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/coverage-v8": "^4.0.15",
     "concurrently": "^9.1.2",
     "dotenv": "^16.4.7",
     "eslint": "^9.36.0",
@@ -33,10 +33,10 @@
     "globals": "^15.15.0",
     "husky": "^9.1.7",
     "prettier": "^3.5.1",
-    "rimraf": "^6.0.1",
+    "rimraf": "^6.1.2",
     "typescript": "~5.6.3",
     "typescript-eslint": "^8.45.0",
-    "vitest": "^3.2.4"
+    "vitest": "^4.0.15"
   },
   "packageManager": "pnpm@9.15.4",
   "os": [
@@ -55,7 +55,8 @@
       "micromatch": "^4.0.8",
       "nanoid": "^3.3.8",
       "prismjs": "^1.30.0",
-      "vite": "^5.4.19"
+      "vite": "^7.2.6",
+      "form-data": "^4.0.5"
     }
   }
 }
