--- a/.github/workflows/nightlyCypressTests.yaml
+++ b/.github/workflows/nightlyCypressTests.yaml
@@ -100,14 +100,20 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: "npm"
-          cache-dependency-path: pets-ui/package-lock.json
+
+      - name: Cache node modules
+        uses: actions/cache@v4
+        with:
+          path: pets-ui/node_modules
+          key: ${{ runner.os }}-node-modules-${{ hashFiles('pets-ui/package-lock.json', 'pets-ui/package.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-modules-
 
       - name: Cache Cypress binary
         uses: actions/cache@v4
         with:
           path: ~/.cache/Cypress
-          key: cypress-binary-${{ runner.os }}-${{ hashFiles('pets-ui/package-lock.json') }}
+          key: cypress-binary-${{ runner.os }}-${{ hashFiles('pets-ui/package-lock.json', 'pets-ui/package.json') }}
           restore-keys: |
             cypress-binary-${{ runner.os }}-
 
@@ -184,7 +190,8 @@ jobs:
 
           if [ ${#JSON_FILES[@]} -gt 0 ]; then
             echo "Found ${#JSON_FILES[@]} report files to merge"
-            npx --yes mochawesome-merge "${JSON_FILES[@]}" > "$MERGED_FILE"
+            # Use the installed mochawesome-merge from package.json
+            npx mochawesome-merge "${JSON_FILES[@]}" > "$MERGED_FILE"
             echo "✅ Reports merged successfully"
             
             # Show merged stats
