added a legacy flag to enable npm install all peer dependcies for the current version of react

--- a/.github/workflows/nightlyCypressTests.yaml
+++ b/.github/workflows/nightlyCypressTests.yaml
@@ -119,7 +119,7 @@ jobs:
 
       - name: Install dependencies
         working-directory: pets-ui
-        run: npm install --no-save
+        run: npm install --legacy-peer-deps
 
       - name: Verify Cypress installation
         working-directory: pets-ui
