--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -68,6 +68,7 @@ jobs:
   cypress-run:
     name: Run cypress tests
     runs-on: ubuntu-latest
+    needs: core-services-tests
     strategy:
       fail-fast: false
       matrix:
