--- a/pets-ui/package.json
+++ b/pets-ui/package.json
@@ -11,7 +11,6 @@
     "preview": "vite preview",
     "test": "vitest run",
     "test-coverage": "vitest run --coverage",
-    
     "cypress:open": "cypress open -C cypress/cypress.config.mjs",
     "cypress:run": "cypress run -C cypress/cypress.config.mjs",
     "cypress:open:qat": "cross-env ENVIRONMENT=qat cypress open -C cypress/cypress.config.mjs",
@@ -45,6 +44,7 @@
     "react-error-boundary": "^6.0.0",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.62.0",
+    "react-idle-timer": "^5.7.2",
     "react-redux": "^9.2.0",
     "react-router": "^7.10.1",
     "sass": "^1.81.0",
