fix cypress tests for signout functionality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,7 @@
     "typescript.tsdk": "node_modules/typescript/lib",
     "yaml.schemas": {
         "https://www.artillery.io/schema.json": []
-    }
+    },
+    "snyk.advanced.organization": "d8274cef-c73d-4890-84d3-ccd2409cdf46",
+    "snyk.advanced.autoSelectOrganization": true
 }
