TBBETA-1914 add env vars to deployment script

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -52,6 +52,7 @@ jobs:
       API_GATEWAY_ID: ${{ vars.API_GATEWAY_ID }}
       VITE_MSAL_CLIENT_ID: ${{ secrets.VITE_MSAL_CLIENT_ID }}
       VITE_MSAL_TENANT_ID: ${{ secrets.VITE_MSAL_TENANT_ID }}
+      CLINIC_ID: ${{ vars.CLINIC_ID }}
 
     outputs:
       config: ${{ steps.deployment-config.outputs.deploy_config }}
@@ -99,6 +100,7 @@ jobs:
       VITE_MSAL_CLIENT_ID: ${{ secrets.VITE_MSAL_CLIENT_ID }}
       VITE_MSAL_TENANT_ID: ${{ secrets.VITE_MSAL_TENANT_ID }}
       VITE_SSE_KEY_ID: ${{ vars.SSE_KEY_ID }}
+      CLINIC_ID: ${{ vars.CLINIC_ID }}
 
     strategy:
       matrix:
