TBBETA-1914 rename CLINIC_ID -> SUPPORT_CLINIC_ID

--- a/configs/.env
+++ b/configs/.env
@@ -27,4 +27,4 @@ EDAP_INTEGRATION_DLQ_NAME=sqs-edap-integration-dlq
 VITE_GA_CONFIG_ID=G-KDJBNRPRJM
 AUDIT_SERVICE_LAMBDA_NAME=audit-lambda
 AUDIT_SERVICE_DATABASE_NAME=pets-local-audit
-CLINIC_ID=UK/LHR/00/
+SUPPORT_CLINIC_ID=UK/LHR/00/
